# zephyr-gtest-example

./: CMakeLists.txt  README.md  prj.conf  west.yml
include/: max.h
src/: main.c  max.c
tests/: hello_test.cpp
